# Violet.Subprocess

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  default.nix  dummy.cc  flake.nix  shell.nix
.github/workflows/: CI.yaml  Linux.yaml  Release.yaml
bazel/: BUILD.bazel  cc.bzl  flags.bzl  version.bzl
bazel/cc/: defs.bzl
bazel/flags/: BUILD.bazel
hack/: BUILD.bazel  bazeldist.py
hack/nix/: devshell.sh
hack/pkg-config/: libviolet_subprocess.pc
include/violet/: BUILD.bazel  Subprocess.h
include/violet/Subprocess/: BUILD.bazel  Background.h  ExitStatus.h  PID.h  PipeReader.h  Stdio.h
include/violet/Subprocess/Impl/: Unix.h  Windows.h
include/violet/Subprocess/Runtime/: BUILD.bazel  Info.h
include/violet/Subprocess/detail/: config.h
nix/: devshell.nix
nix/lib/: common.nix
patches/: 001_violet__remove_hcc.patch
src/: BUILD.bazel  unix.cc
src/background/: BUILD.bazel  unix.cc
src/exit_status/: unix.cc  windows.cc
src/pid/: unix.cc  windows.cc
src/pipe_reader/: BUILD.bazel  epoll.cc  iouring.cc  kqueue.cc
src/stdio/: unsupported.cc  windows.cc
src/subprocess/: linux.cc  unix.cc
subprocess/: BUILD.bazel
tests/: BUILD.bazel  PipeReader.unix.test.cc  Subprocess.test.cc  Subprocess.unix.test.cc
tests/runfiles/: BUILD.bazel
tests/runfiles/unix/: hang.cc  print_args.c  print_env.c
tools/: bazeldist  hotpatch-release.py
