# 🌺💜 Violet.Subprocess: C++20 library for subprocesses in a cross-platform, secure way
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "violet_cc_library")

violet_cc_library(
    name = "runtime_info",
    hdrs = ["//include/violet/Subprocess/Runtime:Info.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@violet//violet:smol_string",
    ],
)

violet_cc_library(
    name = "exit_status",
    srcs = select({
        "@platforms//os:linux": ["exit_status/unix.cc"],
        "@platforms//os:macos": ["exit_status/unix.cc"],
        "@platforms//os:windows": ["exit_status/windows.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["//include/violet/Subprocess:ExitStatus.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@violet//violet",
        "@violet//violet/container:optional",
    ],
)

violet_cc_library(
    name = "pid",
    srcs = select({
        "@platforms//os:linux": ["pid/unix.cc"],
        "@platforms//os:macos": ["pid/unix.cc"],
        "@platforms//os:windows": ["pid/windows.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["//include/violet/Subprocess:PID.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@violet//violet",
        "@violet//violet/container:optional",
    ],
)

violet_cc_library(
    name = "stdio",
    hdrs = ["//include/violet/Subprocess:Stdio.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@violet//:io",
        "@violet//violet",
        "@violet//violet/container:optional",
        "@violet//violet/filesystem:path",
    ],
)

violet_cc_library(
    name = "subprocess",
    srcs = select({
        "@platforms//os:linux": [
            "subprocess/linux.cc",
            "subprocess/unix.cc",
        ],
        "@platforms//os:macos": [
            "subprocess/macos.cc",
            "subprocess/unix.cc",
        ],
        "@platforms//os:windows": ["subprocess/windows.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["//include/violet:Subprocess.h"] + select({
        "@platforms//os:linux": ["//include/violet/Subprocess/Impl:Unix.h"],
        "@platforms//os:macos": ["//include/violet/Subprocess/Impl:Unix.h"],
        "@platforms//os:windows": ["//include/violet/Subprocess/Impl:Windows.h"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":exit_status",
        ":pid",
        ":stdio",
        "//src/pipe_reader",
        "//src/pipe_reader:platform_dependent",
        "@violet//violet",
        "@violet//violet/container:optional",
        "@violet//violet/filesystem:path",
    ],
)
