# 🌺💜 Violet.Subprocess: C++20 library for subprocesses in a cross-platform, secure way
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "cc_library")

cc_library(
    name = "stdio",
    srcs = select({
        "@platforms//os:linux": ["//src/stdio:unix.cc"],
        "@platforms//os:macos": ["//src/stdio:unix.cc"],
        "@platforms//os:windows": ["//src/stdio:windows.cc"],
        "//conditions:default": ["//src/stdio:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Subprocess:Stdio.h"],
    visibility = ["//visibility:public"],
    deps = ["@violet//violet"],
)

cc_library(
    name = "background",
    srcs = select({
        "@platforms//os:linux": ["//src/background:unix.cc"],
        "@platforms//os:macos": ["//src/background:unix.cc"],
        "@platforms//os:windows": ["//src/background:windows.cc"],
        "//conditions:default": ["//src/background:unsupported.cc"],
    }),
    hdrs = ["//include/violet/Subprocess:Background.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":subprocess",
        "@violet//violet",
    ],
)

cc_library(
    name = "subprocess",
    srcs = select({
        "@platforms//os:linux": ["//src:unix.cc"],
        "@platforms//os:macos": ["//src:unix.cc"],
        "@platforms//os:windows": ["//src:windows.cc"],
        "//conditions:default": ["//src:unsupported.cc"],
    }),
    hdrs = ["//include/violet:Subprocess.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":stdio",
        "@violet//violet",
        "@violet//violet/io:descriptor",
    ],
)
