# 🌺💜 Violet.Subprocess: C++20 library for subprocesses in a cross-platform, secure way
# Copyright (c) 2025-2026 Noelware, LLC. <team@noelware.org>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("//bazel:cc.bzl", "violet_cc_test")

violet_cc_test(
    name = "pipe_reader_unix",
    srcs = ["PipeReader.unix.test.cc"],
    data = [
        "//tests/runfiles:print_args",
        "//tests/runfiles:print_env",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    with_gtest_main = False,
    deps = [
        "//src:pid",
        "//src/pipe_reader",
        "//src/pipe_reader:platform_dependent",
        "@violet//violet/testing:runfiles",
        "@violet//violet/testing:runfiles_main",
    ],
)

violet_cc_test(
    name = "subprocess",
    srcs = ["Subprocess.test.cc"],
    data = [
        "//tests/runfiles:hang",
        "//tests/runfiles:print_args",
        "//tests/runfiles:print_env",
    ],
    with_gtest_main = False,
    deps = [
        "//src:subprocess",
        "@violet//violet/filesystem:file",
        "@violet//violet/filesystem:temporary",
        "@violet//violet/testing:runfiles",
        "@violet//violet/testing:runfiles_main",
    ],
)

violet_cc_test(
    name = "subprocess_unix",
    srcs = ["Subprocess.unix.test.cc"],
    data = [
        "//tests/runfiles:print_args",
        "//tests/runfiles:print_env",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    with_gtest_main = False,
    deps = [
        "//src:subprocess",
        "@violet//violet/testing:runfiles",
        "@violet//violet/testing:runfiles_main",
    ],
)
